// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default 1`] = `
<div
  className=" css-dgsc3e-CardStyle ejy78ug8"
>
  <img
    alt=""
    className=" css-142sfdf-StyledIcon ejy78ug6"
    src="test-image-stub"
  />
  <div
    className="hasIcon css-2bmr44-TopicStyle ejy78ug1"
  >
    topic
  </div>
  <div
    className=" css-mk6kj1-DescriptionStyle ejy78ug0"
  >
    Description
  </div>
</div>
`;

exports[`with Badge 1`] = `
<div
  className=" css-dgsc3e-CardStyle ejy78ug8"
>
  <img
    alt=""
    className=" css-142sfdf-StyledIcon ejy78ug6"
    src="test-image-stub"
  />
  <div
    className="css-1hyoydr-BadgeStyle ejy78ug5"
  >
    <div
      className="css-1x0r73o-StyledBadge e1sxbycx0"
    >
      BADGETEXT
    </div>
  </div>
  <div
    className="hasIcon css-2bmr44-TopicStyle ejy78ug1"
  >
    topic
  </div>
  <div
    className=" css-mk6kj1-DescriptionStyle ejy78ug0"
  >
    Description
  </div>
</div>
`;

exports[`with Center Align 1`] = `
<div
  className="center css-dgsc3e-CardStyle ejy78ug8"
>
  <img
    alt=""
    className="center css-142sfdf-StyledIcon ejy78ug6"
    src="test-image-stub"
  />
  <div
    className="center hasIcon css-2bmr44-TopicStyle ejy78ug1"
  >
    topic
  </div>
  <div
    className="center css-mk6kj1-DescriptionStyle ejy78ug0"
  >
    Description
  </div>
</div>
`;

exports[`with Center Align and Badge 1`] = `
<div
  className="center css-dgsc3e-CardStyle ejy78ug8"
>
  <img
    alt=""
    className="center css-142sfdf-StyledIcon ejy78ug6"
    src="test-image-stub"
  />
  <div
    className="css-1hyoydr-BadgeStyle ejy78ug5"
  >
    <div
      className="css-1x0r73o-StyledBadge e1sxbycx0"
    >
      BADGETEXT
    </div>
  </div>
  <div
    className="center hasIcon css-2bmr44-TopicStyle ejy78ug1"
  >
    topic
  </div>
  <div
    className="center css-mk6kj1-DescriptionStyle ejy78ug0"
  >
    Description
  </div>
</div>
`;

exports[`with Center Align and Link 1`] = `
<a
  className="css-2om2dx-StyledLink ejy78ug7"
  href="https://www.dwolla.com"
  onClick={[Function]}
  onMouseEnter={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  <div
    className="center css-dgsc3e-CardStyle ejy78ug8"
  >
    <img
      alt=""
      className="center css-142sfdf-StyledIcon ejy78ug6"
      src="test-image-stub"
    />
    <div
      className="css-17etk8v-LinkIconStyle ejy78ug3"
    >
      <svg
        width={13}
      />
    </div>
    <div
      className="center hasIcon css-2bmr44-TopicStyle ejy78ug1"
    >
      topic
    </div>
    <div
      className="center css-mk6kj1-DescriptionStyle ejy78ug0"
    >
      Description
    </div>
  </div>
</a>
`;

exports[`with Center Align, Link and Badge 1`] = `
<a
  className="css-2om2dx-StyledLink ejy78ug7"
  href="https://www.dwolla.com"
  onClick={[Function]}
  onMouseEnter={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  <div
    className="center css-dgsc3e-CardStyle ejy78ug8"
  >
    <img
      alt=""
      className="center css-142sfdf-StyledIcon ejy78ug6"
      src="test-image-stub"
    />
    <div
      className="css-1hyoydr-BadgeStyle ejy78ug5"
    >
      <div
        className="css-1x0r73o-StyledBadge e1sxbycx0"
      >
        BADGETEXT
      </div>
    </div>
    <div
      className="css-17etk8v-LinkIconStyle ejy78ug3"
    >
      <svg
        width={13}
      />
    </div>
    <div
      className="center hasIcon css-2bmr44-TopicStyle ejy78ug1"
    >
      topic
    </div>
    <div
      className="center css-mk6kj1-DescriptionStyle ejy78ug0"
    >
      Description
    </div>
  </div>
</a>
`;

exports[`with Flex 1`] = `
<div
  className="flex css-dgsc3e-CardStyle ejy78ug8"
>
  <img
    alt=""
    className=" css-142sfdf-StyledIcon ejy78ug6"
    src="test-image-stub"
  />
  <div
    className="css-oo2is7-StyledFlexDiv ejy78ug2"
  >
    <div
      className="flex hasIcon css-2bmr44-TopicStyle ejy78ug1"
    >
      topic
    </div>
    <div
      className=" css-mk6kj1-DescriptionStyle ejy78ug0"
    >
      Description
    </div>
  </div>
</div>
`;

exports[`with Flex and Badge 1`] = `
<div
  className="flex css-dgsc3e-CardStyle ejy78ug8"
>
  <img
    alt=""
    className=" css-142sfdf-StyledIcon ejy78ug6"
    src="test-image-stub"
  />
  <div
    className="css-1hyoydr-BadgeStyle ejy78ug5"
  >
    <div
      className="css-1x0r73o-StyledBadge e1sxbycx0"
    >
      BADGETEXT
    </div>
  </div>
  <div
    className="css-oo2is7-StyledFlexDiv ejy78ug2"
  >
    <div
      className="flex hasIcon css-2bmr44-TopicStyle ejy78ug1"
    >
      topic
    </div>
    <div
      className=" css-mk6kj1-DescriptionStyle ejy78ug0"
    >
      Description
    </div>
  </div>
</div>
`;

exports[`with Flex, Link and Badge 1`] = `
<a
  className="css-2om2dx-StyledLink ejy78ug7"
  href="https://www.dwolla.com"
  onClick={[Function]}
  onMouseEnter={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  <div
    className="flex css-dgsc3e-CardStyle ejy78ug8"
  >
    <img
      alt=""
      className=" css-142sfdf-StyledIcon ejy78ug6"
      src="test-image-stub"
    />
    <div
      className="css-1hyoydr-BadgeStyle ejy78ug5"
    >
      <div
        className="css-1x0r73o-StyledBadge e1sxbycx0"
      >
        BADGETEXT
      </div>
    </div>
    <div
      className="css-17etk8v-LinkIconStyle ejy78ug3"
    >
      <svg
        width={13}
      />
    </div>
    <div
      className="css-oo2is7-StyledFlexDiv ejy78ug2"
    >
      <div
        className="flex hasIcon css-2bmr44-TopicStyle ejy78ug1"
      >
        topic
      </div>
      <div
        className=" css-mk6kj1-DescriptionStyle ejy78ug0"
      >
        Description
      </div>
    </div>
  </div>
</a>
`;

exports[`with Languages 1`] = `
<a
  className="css-2om2dx-StyledLink ejy78ug7"
  href="https://www.dwolla.com"
  onClick={[Function]}
  onMouseEnter={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  <div
    className=" css-dgsc3e-CardStyle ejy78ug8"
  >
    <div
      className="css-17etk8v-LinkIconStyle ejy78ug3"
    >
      <svg
        width={13}
      />
    </div>
    <div
      className=" css-2bmr44-TopicStyle ejy78ug1"
    >
      topic
    </div>
    <div
      className=" css-mk6kj1-DescriptionStyle ejy78ug0"
    >
      Description
      <div
        className="css-ek0x2m-LanguageBadgeStyle ejy78ug4"
      >
        <div
          className="orange css-1x0r73o-StyledBadge e1sxbycx0"
        >
          css
        </div>
        <div
          className="orange css-1x0r73o-StyledBadge e1sxbycx0"
        >
          handlebars
        </div>
        <div
          className="orange css-1x0r73o-StyledBadge e1sxbycx0"
        >
          html
        </div>
        <div
          className="orange css-1x0r73o-StyledBadge e1sxbycx0"
        >
          java
        </div>
        <div
          className="orange css-1x0r73o-StyledBadge e1sxbycx0"
        >
          javascript
        </div>
        <div
          className="orange css-1x0r73o-StyledBadge e1sxbycx0"
        >
          kotlin
        </div>
        <div
          className="orange css-1x0r73o-StyledBadge e1sxbycx0"
        >
          php
        </div>
        <div
          className="orange css-1x0r73o-StyledBadge e1sxbycx0"
        >
          python
        </div>
        <div
          className="orange css-1x0r73o-StyledBadge e1sxbycx0"
        >
          ruby
        </div>
        <div
          className="orange css-1x0r73o-StyledBadge e1sxbycx0"
        >
          shell
        </div>
        <div
          className="orange css-1x0r73o-StyledBadge e1sxbycx0"
        >
          typescript
        </div>
      </div>
    </div>
  </div>
</a>
`;

exports[`with Link 1`] = `
<a
  className="css-2om2dx-StyledLink ejy78ug7"
  href="https://www.dwolla.com"
  onClick={[Function]}
  onMouseEnter={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  <div
    className=" css-dgsc3e-CardStyle ejy78ug8"
  >
    <img
      alt=""
      className=" css-142sfdf-StyledIcon ejy78ug6"
      src="test-image-stub"
    />
    <div
      className="css-17etk8v-LinkIconStyle ejy78ug3"
    >
      <svg
        width={13}
      />
    </div>
    <div
      className="hasIcon css-2bmr44-TopicStyle ejy78ug1"
    >
      topic
    </div>
    <div
      className=" css-mk6kj1-DescriptionStyle ejy78ug0"
    >
      Description
    </div>
  </div>
</a>
`;

exports[`with Link and Badge 1`] = `
<a
  className="css-2om2dx-StyledLink ejy78ug7"
  href="https://www.dwolla.com"
  onClick={[Function]}
  onMouseEnter={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  <div
    className=" css-dgsc3e-CardStyle ejy78ug8"
  >
    <img
      alt=""
      className=" css-142sfdf-StyledIcon ejy78ug6"
      src="test-image-stub"
    />
    <div
      className="css-1hyoydr-BadgeStyle ejy78ug5"
    >
      <div
        className="css-1x0r73o-StyledBadge e1sxbycx0"
      >
        BADGETEXT
      </div>
    </div>
    <div
      className="css-17etk8v-LinkIconStyle ejy78ug3"
    >
      <svg
        width={13}
      />
    </div>
    <div
      className="hasIcon css-2bmr44-TopicStyle ejy78ug1"
    >
      topic
    </div>
    <div
      className=" css-mk6kj1-DescriptionStyle ejy78ug0"
    >
      Description
    </div>
  </div>
</a>
`;
